# kronos

./: .gitignore  .gitmodules  CMakeLists.txt  INSTALL.md  License.html  README.md  annotated.html  asf_8h.html  asf_8h__dep__incl.map  asf_8h_source.html  classTemplate.html  classes.html  classkronos_1_1ApolloExporter-members.html  classkronos_1_1ApolloExporter.js  classkronos_1_1BusAsync-members.html  classkronos_1_1BusAsync__coll__graph.map  classkronos_1_1BusAsync__inherit__graph.map  classkronos_1_1BusAsync__inherit__graph.md5  classkronos_1_1BusBase__coll__graph.md5  classkronos_1_1BusBase__inherit__graph.map  classkronos_1_1BusBase__inherit__graph.md5  classkronos_1_1BusSync-members.html  classkronos_1_1BusSync.html  classkronos_1_1BusSync.js  classkronos_1_1BusSync__coll__graph.md5  classkronos_1_1ComponentActive-members.html  classkronos_1_1ComponentActive.html  classkronos_1_1ComponentActive__inherit__graph.map  classkronos_1_1ComponentBase-members.html  classkronos_1_1ComponentBase.html  classkronos_1_1ComponentBase__inherit__graph.map  classkronos_1_1ComponentCanDriver.html  classkronos_1_1ComponentCommandDispatcher-members.html  classkronos_1_1ComponentCommandDispatcher.html  classkronos_1_1ComponentCspDriver-members.html  classkronos_1_1ComponentCspDriver.html  classkronos_1_1ComponentCspDriver__coll__graph.md5  classkronos_1_1ComponentFileManager.html  classkronos_1_1ComponentFileManager.js  classkronos_1_1ComponentFileManager__coll__graph.md5  (+150 more)
Kronos_lib/: CMakeLists.txt  README.md
Kronos_lib/include/: FreeRTOSConfig.h  asf.h  bus.h  component.h  kronos.h  ks_bus.h  ks_channel.h  ks_component.h  ks_event.h  ks_opcodes.h
Kronos_lib/include/components/: active.h  ks_active.h  ks_component_active.h  ks_component_passive.h  ks_component_queue.h  ks_component_queued.h  passive.h  queue.h
Kronos_lib/include/services/: ks_component_health_monitor.h  ks_component_logger.h  ks_health_monitor.h  ks_logger.h
Kronos_lib/include/types/: hashmap.h  keyhash.h  ks_hashmap.h  ks_queue.h  ks_string.h  ks_vector.h  string.h  types.h  vector.h
Kronos_lib/include/utilities/: ks_util_scheduler.h
Kronos_lib/src/: bus.cpp  component.cpp  kronos.cpp  ks_bus.cpp  main.c  main.cpp
Kronos_lib/src/Blinky_Demo/: main_blinky.c
Kronos_lib/src/Full_Demo/: IntQueueTimer.c  RegTest_GCC.c  main_full.c
Kronos_lib/src/components/: ks_component_active.cpp  ks_component_passive.cpp  ks_component_queue.cpp  ks_component_queued.cpp
Kronos_lib/src/services/: ks_component_logger.cpp
Kronos_lib/src/types/: ks_string.cpp  ks_vector.cpp
Kronos_lib/src/utilities/: ks_util_scheduler.cpp
lib/: CMakeLists.txt  INSTALL.md  README.md  kronos.cpp  kronos.h  ks_config.h
lib/boards/sam_v71_q21_orthus/: pinout.h
lib/components/: ks_error_component_codes.h  ks_event_codes.h
lib/components/command_dispatcher/: ks_command_dispatcher.cpp  ks_command_dispatcher.h
lib/components/command_parser/: ks_comman_parser.cpp  ks_comman_parser.h
lib/components/command_scheduler/: ks_command_scheduler.cpp  ks_command_scheduler.h
lib/components/health_monitor/: ks_health_monitor.cpp  ks_health_monitor.h
lib/components/led_blinker/: ks_led_blinker.cpp  ks_led_blinker.h
lib/config/: RTE_Components.h  hpl_dac_config.h  hpl_mcan_config.h  hpl_pmc_config.h  hpl_spi_config.h  hpl_uart_config.h  ks_bus_conf.h  ks_component_conf.h  ks_conf.h  ks_descriptor_conf.h  ks_error_codes.h  ks_event_codes.h  peripheral_clk_config.h
lib/core/: ks_error.h  ks_error_codes.h  ks_framework.cpp  ks_framework.h  ks_pch.h  ks_types.h
lib/core/bus/: ks_bus.cpp  ks_bus.h
lib/core/component/: ks_component_active.cpp  ks_component_active.h  ks_component_base.cpp  ks_component_base.h  ks_component_passive.cpp  ks_component_passive.h  ks_component_publisher.cpp  ks_component_publisher.h  ks_component_queued.cpp  ks_component_queued.h  ks_component_worker.cpp  ks_component_worker.h
lib/core/file_system/: ks_file_system.cpp  ks_file_system.h
lib/core/health_monitor/: ks_health_monitor.cpp
lib/core/include/: asf.h  index.md  kronos.h  ks_codes.h  ks_framework.h  std_stub.h
lib/core/logger/: ks_logger.cpp  ks_logger.h
lib/core/macros/: ks_assert.h  ks_macros.h
lib/core/module/: ks_module.cpp  ks_module.h
lib/core/parameter_database/: ks_parameter_database.cpp  ks_parameter_database.h
lib/core/src/: kronos.cpp  ks_bus.cpp  ks_framework.cpp
lib/core/types/: ks_freertos.h  ks_protocols.h  ks_queue.h  ks_std.h
lib/drivers/: ks_gpio.h  ks_i2c.h  ks_io.h  ks_spi.h  ks_uart.h  ks_usart.h
lib/drivers/asf/: ks_gpio.cpp  ks_i2c.cpp  ks_spi.cpp  ks_uart.cpp  ks_usart.cpp
lib/drivers/clock/: ks_clock.h
lib/drivers/file_system/: ks_file.cpp  ks_file.h  ks_filesystem.cpp  ks_filesystem.h
lib/drivers/freertos/: ks_gpio.cpp
lib/drivers/protocols/: ks_i2c.h  ks_io.h  ks_spi.h  ks_usart.h
lib/drivers/storage/: ks_mram.h  ks_ram.cpp  ks_ram.h
lib/hpl/dac/: hpl_dac.c
lib/hpl/hsmci/: hpl_hsmci.c
lib/hpl/mcan/: hpl_mcan.c
lib/hri/: hri_acc_v71.h  hri_aes_v71.h  hri_afec_v71.h  hri_chipid_v71.h  hri_dacc_v71.h  hri_efc_v71.h  hri_gmac_v71.h  hri_gpbr_v71.h  hri_hsmci_v71.h  hri_icm_v71.h  hri_isi_v71.h  hri_lockbit_v71.h  hri_matrix_v71.h  hri_mcan_v71.h  hri_mlb_v71.h  hri_pio_v71.h  hri_pmc_v71.h  hri_pwm_v71.h  hri_qspi_v71.h  hri_rstc_v71.h  hri_rswdt_v71.h  hri_rtc_v71.h  hri_rtt_v71.h  hri_sdramc_v71.h  hri_smc_v71.h  hri_spi_v71.h  hri_ssc_v71.h  hri_supc_v71.h  hri_tc_v71.h  hri_trng_v71.h  hri_twihs_v71.h  hri_uart_v71.h  hri_usart_v71.h  hri_usbhs_v71.h  hri_utmi_v71.h  hri_v71.h  hri_wdt_v71.h  hri_xdmac_v71.h
lib/include/: index.md  kronos.h  ks_bus.h  ks_codes.h  ks_framework.h  ks_opcodes.h  std_stub.h
lib/include/components/: ks_component_active.h  ks_component_base.h  ks_component_passive.h  (+1 more)
lib/macros/: ks_assert.h  ks_macros.h  macros.h
lib/os/: ks_queue.h  ks_task.h
lib/src/: kronos.cpp  ks_bus.cpp  ks_framework.cpp
src/: bus.cpp  (+4 more)
tests/: CMakeLists.txt  README.md
tests/include/: Assert.h  KronosTest.h  test.h
tests/src/: KronosTest.cpp  catch_amalgamated.cpp  main.cpp  stub.cpp
(+860 files in other folders)
